PN-16717-sixties - some stupid fixes